自己紹介の加筆と余白の修正

--- a/css/style.css
+++ b/css/style.css
@@ -112,6 +112,9 @@ nav ul li a{
 
 .about p{
   text-align: center;
+  padding: 0 40px;
+  margin: 24px auto 0;
+  max-width: 700px;
 }
 
 /* skill */
