--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,24 @@
 /* common */
 
+:root{
+  --himawari: rgb(255, 208, 0);
+}
+
 html{
   scroll-behavior: smooth;
 }
 body{
-  font-family:"OptimaLTPro-Roman","Ryumin Regular KL",serif;
+  font-family: "OptimaLTPro-Roman","Ryumin Regular KL",serif;
   margin: 0;
   background: rgb(209, 203, 203);
 }
 h1{
-  color:black;
+  color: black;
   text-align: center;
   font-size: 30px;
   margin: 0;
   padding: 0;
-  font-weight:normal;
+  font-weight: normal;
 }
 h2{
   margin: 4px;
@@ -23,14 +27,14 @@ p{
   margin: 0;
 }
 a{
-  color:white;
+  color: white;
   transition: all .3s;
   text-decoration: none;
   font-weight: normal;
 }
 a:hover{
-  color:rgb(255, 208, 0);
-  border-color: rgb(255, 208, 0);
+  color: var(--himawari);
+  border-color: var(--himawari);
 }
 ul{
   padding: 0;
@@ -43,8 +47,8 @@ li{
   padding: 0 5px;
   color: rgba(255, 208, 0,0.8);
   position: fixed;
-  right:30px;
-  bottom:20px;
+  right: 30px;
+  bottom: 20px;
 
 }
 #top{
@@ -58,20 +62,19 @@ section + section{
   margin-top: 160px;
 }
 span{
-  position:relative;
-  top:-80px;
+  position: relative;
+  top: -80px;
   display: block;
 }
 
 /* header */
 
 header{
-  position:fixed;
+  position: fixed;
   top: 0;
   width: 100%;
   display: flex;
   justify-content: space-between;
-  /* padding: 0 16px; */
   align-items: center;
   transition:background-color .3s, box-shadow .3s;
   z-index: 1;
@@ -80,40 +83,42 @@ header.scrolled{
   background-color: rgba(255, 208, 0, 0.5);
   box-shadow: 0 0 4px rgba(0,0,0,0.3);
 }
-/* header:hover.scrolled{
-  color:black !important;
-} */
 header h1{
-  color:white;
+  color: white;
   font-size: 30px;
-  margin: 0;
+  margin: 0 16px;
   padding: 0;
-  font-weight:normal;
+  font-weight: normal;
   transition: all .3s; 
 }
 header h1:hover{
-  color:rgb(255, 208, 0);
+  color: var(--himawari);
 }
-header i{
-  font-size: 24px;
+header.scrolled h1:hover,
+header.scrolled a:hover{
+  color: #333;
 }
 header a{
-  margin: 0 16px;
+  font-size: 24px;
+  margin: 0;
+}
+header a + a{
+  margin: 0 16px 0 4px;
 }
 
 /* hero */
 
 .bgi{
-  background-image: url(../img/DSCF0817.JPG);
   width: 100%;
   height: 500px;
-  background-size:cover;
+  background-image: url(../img/DSCF0817.JPG);
+  background-size: cover;
   margin: 0 auto;
 }
 .rgb{
-  background: linear-gradient(rgba(0,0,0,0),rgba(209, 203, 203,1));
   width: 100%;
   height: 501px;
+  background: linear-gradient(rgba(0,0,0,0),rgba(209, 203, 203,1));
 }
 
 /* nav */
@@ -127,8 +132,8 @@ nav ul li + li{
   margin-top: 40px;
 }
 nav ul li a{
-  color:black;
-  border:1px solid black;
+  color: black;
+  border: 1px solid black;
   font-size: 24px;
   padding: 16px 16px;
 }
@@ -136,10 +141,10 @@ nav ul li a{
 /* about */
 
 .about p{
+  max-width: 700px;
   text-align: center;
   padding: 0 40px;
   margin: 24px auto 24px;
-  max-width: 700px;
 }
 details{
   margin: 0 auto;
@@ -156,8 +161,6 @@ summary{
   cursor: pointer;
   outline: none;
   background-color: rgb(185, 177, 173);
-  /* border-radius: 3px; */
-  /* border: 2px solid rgba(255, 208, 0,0.8); */
   border: 1px solid #fff;
   padding: 5px 30px;
   color: #fff;
@@ -168,7 +171,6 @@ summary:hover{
 }
 summary::after{
   content: "+";
-  /* margin-left: 30px; */
   color: #fff;
   font-size: 21px;
   transition: transform 1s;
@@ -189,7 +191,6 @@ summary::-webkit-details-marker{
 }
 details[open] .answer{
   animation: fadein .5s;
-  /* animation-iteration-count: infinite; */
 }
 @keyframes fadein{
   0%{
@@ -205,7 +206,6 @@ details[open] .answer{
 /* skill */
 
 .skill li{
-  /* outline: 1px solid red; */
   margin: 0 30px;
   display: flex;
   align-items: center;
@@ -236,17 +236,16 @@ details[open] .answer{
   display: flex;
   padding: 0;
   margin: 0 auto;
-  justify-content:space-around;
+  justify-content: space-around;
   flex-wrap: wrap;
 }
 .work_list h2{
   margin: 0;
 }
 .work_list a{
-  color:black;
+  color: black;
   display: block;
   text-align: center;
-  /* border:1px solid black; */
 }
 .work_list{
   margin: 0 auto;
@@ -265,14 +264,14 @@ details[open] .answer{
 }
 .work_list img:hover{
   transform: translate(-4px,-6px);
-  box-shadow:8px 12px rgba(255, 208, 0, 0.5);
+  box-shadow: 8px 12px rgba(255, 208, 0, 0.5);
 }
 
 /* contact */
 
 .contact h1,
 .contact p{
-  color:black;
+  color: black;
   text-align: center;
   margin: 16px 0 0;
 }
@@ -280,7 +279,7 @@ details[open] .answer{
   color:black;
 }
 .contact a:hover{
-  color:rgb(255, 208, 0);
+  color: var(--himawari);
 }
 .contact{
   margin-bottom: 100px;
@@ -294,30 +293,26 @@ footer{
   margin: 16px 0;
 }
 footer small{
-  color:white;
+  color: white;
 }
 
 /* midium */
 
 @media (min-width:550px){
-  body{
-    /* background: pink; */
-  }
   nav ul{
     display: flex;
     flex-wrap: wrap;
     margin: 0 60px;
-    justify-content:space-around
+    justify-content: space-around
   }
   nav ul li{
     width: 40%;
-    /* outline: 2px solid red; */
     margin: 40px 0 ;
   }
   .skill ul{
     display: flex;
     flex-wrap: wrap;
-    justify-content:space-around;
+    justify-content: space-around;
     margin: 0 40px;
   }
   .skill li{
@@ -340,20 +335,16 @@ footer small{
 /* large */
 
 @media (min-width:850px){
-  body{
-    /* background: blue; */
-  }
   nav ul{
     list-style: none;
     display: flex;
     flex-wrap: wrap;
     padding: 400px 0;
     margin: 0 60px;
-    justify-content:space-around;
+    justify-content: space-around;
   }
   nav ul li{
     width: 25%;
-    /* outline: 2px solid red; */
     margin: 0 ;
   }
   nav ul li + li{
