--- a/css/style.css
+++ b/css/style.css
@@ -96,7 +96,7 @@ header h1:hover{
 }
 header.scrolled h1:hover,
 header.scrolled a:hover{
-  color: #333;
+  color: #222;
 }
 header a{
   font-size: 24px;
@@ -206,7 +206,7 @@ details[open] .answer{
 /* skill */
 
 .skill li{
-  margin: 0 30px;
+  margin: 0 20px;
   display: flex;
   align-items: center;
   opacity: 0;
@@ -240,7 +240,9 @@ details[open] .answer{
   flex-wrap: wrap;
 }
 .work_list h2{
-  margin: 0;
+  font-size: 24px;
+  font-weight: bold;
+  margin: 8px;
 }
 .work_list a{
   color: black;
@@ -254,12 +256,17 @@ details[open] .answer{
   margin-top: 40px;
   text-align: center;
 }
-.work p{
-  margin: 0;
+.work dt{
+  font-weight: bold;
+  margin: 8px auto 4px;
+}
+.work dd{
+  text-align: left;
 }
 .work_list img{
   width: 100%;
   max-width: 300px;
+  border-radius: 4px;
   transition: all .3s;
 }
 .work_list img:hover{
@@ -293,7 +300,7 @@ footer{
   margin: 16px 0;
 }
 footer small{
-  color: white;
+  color: black;
 }
 
 /* midium */
@@ -313,7 +320,7 @@ footer small{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-    margin: 0 40px;
+    margin: 0 20px;
   }
   .skill li{
     display: block;
