--- a/css/style.css
+++ b/css/style.css
@@ -8,10 +8,11 @@ html{
   scroll-behavior: smooth;
 }
 body{
-  font-family: "OptimaLTPro-Roman","Ryumin Regular KL",serif;
+  /* font-family: "OptimaLTPro-Roman","Ryumin Regular KL",serif; */
   margin: 0;
   background: rgb(209, 203, 203);
   line-height: 1.6;
+  font-family: 'Shippori Mincho B1', serif;
 }
 h1{
   color: black;
@@ -20,6 +21,7 @@ h1{
   margin: 0;
   padding: 0;
   font-weight: normal;
+  font-family: 'Sansita Swashed', cursive;
 }
 h2{
   margin: 8px;
@@ -50,7 +52,6 @@ li{
   position: fixed;
   right: 30px;
   bottom: 20px;
-
 }
 #top{
   opacity: 0;
@@ -62,18 +63,59 @@ li{
 section + section{
   margin-top: 160px;
 }
-span{
+.anchor{
   position: relative;
   top: -80px;
   display: block;
 }
+
+/* ↓各サイト用フォント↓ */
+
+@font-face{ 
+  font-family: 'huiji-subset';
+  src: url('../fonts/ふい字\(サブセット\).ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+.monte{
+  font-family: 'huiji-subset', cursive;
+}
+.monte-img{
+  width: 150px;
+  object-fit: contain;
+}
+.sokudoku{
+  font-family: 'Noto Serif JP', serif;
+  font-weight: normal;
+  font-size: 24px;
+  letter-spacing: .2em;
+  text-decoration: underline;
+}
+.typing{
+  font-family: 'Monofett', cursive;
+  color: #fff;
+  font-size: 40px;
+  letter-spacing: .07em;
+  text-shadow: 2px 2px 2px rgba(0,0,0,.5);
+}
+.monkeybord{
+  font-family: 'Kaisei HarunoUmi', serif;
+  font-size: 24px;
+}
+.monkeybord span{
+  font-family: 'Kaisei HarunoUmi', serif;
+  font-size: 19px;
+}
+
+/* ↑各サイト用フォント↑ */
+
 
 /* header */
 
 header{
   position: fixed;
   top: 0;
-  height: 40px;
+  /* height: 40px; */
   width: 100%;
   display: flex;
   justify-content: space-between;
@@ -85,16 +127,15 @@ header.scrolled{
   background-color: rgba(255, 208, 0, 0.5);
   box-shadow: 0 0 4px rgba(0,0,0,0.3);
 }
-header h1{
-  color: white;
-  font-size: 30px;
-  margin: 0 16px;
-  transition: all .3s; 
+.shibatanoportfolio{
+  width: 30vw;
+  max-width: 260px;
+  object-fit: contain;
+  margin: 8px;
+  backface-visibility: hidden;
+  filter: drop-shadow(1px 1px rgba(0,0,0,.3));
+  /* filter: drop-shadow(1px 1px #fff); */
 }
-header h1:hover{
-  color: var(--himawari);
-}
-header.scrolled h1:hover,
 header.scrolled a:hover{
   color: #222;
 }
@@ -120,21 +161,60 @@ header a + a{
   background: linear-gradient(rgba(0,0,0,0),rgba(209, 203, 203,1));
 }
 
+.hero__list {
+  position: relative;
+  width: 150px;
+  max-width: 800px;
+  margin: 16px auto;
+  padding: 1em 2em;
+}
+.hero__list::before {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  content: "";
+  background:
+    radial-gradient(circle at top left, transparent 20px, #fff 20px, #fff 22px, transparent 22px) left top / 22px 22px no-repeat,
+    radial-gradient(circle at top right, transparent 20px, #fff 20px, #fff 22px, transparent 22px) right top / 22px 22px no-repeat,
+    radial-gradient(circle at bottom left, transparent 20px, #fff 20px, #fff 22px, transparent 22px) left bottom / 22px 22px no-repeat,
+    radial-gradient(circle at bottom right, transparent 20px, #fff 20px, #fff 22px, transparent 22px) right bottom / 22px 22px no-repeat,
+    linear-gradient(90deg, transparent 20px, #fff 22px) left top / 51% 2px no-repeat,
+    linear-gradient(-90deg, transparent 20px, #fff 22px) right top / 51% 2px no-repeat,
+    linear-gradient(90deg, transparent 20px, #fff 22px) left bottom / 51% 2px no-repeat,
+    linear-gradient(-90deg, transparent 20px, #fff 22px) right bottom / 51% 2px no-repeat,
+    linear-gradient(180deg, transparent 20px, #fff 22px) left top / 2px 51% no-repeat,
+    linear-gradient(0deg, transparent 20px, #fff 22px) left bottom / 2px 51% no-repeat,
+    linear-gradient(180deg, transparent 20px, #fff 22px) right top / 2px 51% no-repeat,
+    linear-gradient(0deg, transparent 20px, #fff 22px) right bottom / 2px 51% no-repeat;
+}
+.hero__list::after {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  bottom: 10px;
+  left: 10px;
+  content: "";
+  box-shadow: 0 0 0 1px #fff;
+}
+
 /* nav */
 
 nav ul{
   text-align: center;
   padding-top: 300px;
   margin: 0;
+  font-family: 'Sansita Swashed', cursive;
 }
 nav ul li + li{
   margin-top: 40px;
 }
 nav ul li a{
-  color: black;
+  /* color: black;
   border: 1px solid black;
   font-size: 24px;
-  padding: 16px 16px;
+  padding: 16px 16px; */
 }
 
 /* about */
@@ -247,8 +327,6 @@ details[open] .answer{
   flex: 1;
 }
 .work_list h2{
-  font-size: 24px;
-  font-weight: bold;
   margin: 8px;
 }
 .work dl{
@@ -274,12 +352,12 @@ details[open] .answer{
   margin: 8px auto;
   text-align: left;
 }
-.work_list img{
+.works__list-img{
   width: 300px;
   border-radius: 4px;
   transition: all .3s;
 }
-.work_list img:hover{
+.works__list-img:hover{
   transform: translate(-4px,-6px);
   box-shadow: 8px 12px rgba(255, 208, 0, 0.5);
 }
