--- a/css/style.css
+++ b/css/style.css
@@ -29,36 +29,11 @@ h2{
 p{
   margin: 0;
 }
-a{
-  color: white;
-  transition: all .3s;
-  text-decoration: none;
-  font-weight: normal;
-}
-a:hover{
-  color: var(--himawari);
-  border-color: var(--himawari);
-}
 ul{
   padding: 0;
 }
 li{
   list-style: none;
-}
-.top{
-  font-size: 36px;
-  padding: 0 5px;
-  color: rgba(255, 208, 0,0.8);
-  position: fixed;
-  right: 30px;
-  bottom: 20px;
-}
-#top{
-  opacity: 0;
-  transition: opacity .5s;
-}
-#top.scrolled{
-  opacity: 1;
 }
 section + section{
   margin-top: 160px;
@@ -110,12 +85,35 @@ section + section{
 /* ↑各サイト用フォント↑ */
 
 
+/* ↓TOPへ戻るボタン↓ */
+
+.top{
+  position: fixed;
+  right: 15px;
+  bottom: 15px;
+}
+.top__img{
+  width: 70px;
+  object-fit: contain;
+  filter: drop-shadow(0 0 3px rgba(0,0,0,5));
+}
+.top{
+  opacity: 0;
+  transition: opacity .5s;
+}
+.top.scrolled{
+  opacity: 1;
+}
+
+/* ↑TOPへ戻るボタン↑ */
+
+
 /* header */
 
 header{
   position: fixed;
   top: 0;
-  /* height: 40px; */
+  height: 9vw;
   width: 100%;
   display: flex;
   justify-content: space-between;
@@ -124,25 +122,47 @@ header{
   z-index: 1;
 }
 header.scrolled{
-  background-color: rgba(255, 208, 0, 0.5);
-  box-shadow: 0 0 4px rgba(0,0,0,0.3);
+  /* background-color: rgba(255, 208, 0, 0.5);
+  box-shadow: 0 0 4px rgba(0,0,0,0.3); */
 }
-.shibatanoportfolio{
-  width: 30vw;
-  max-width: 260px;
+.header__title-img{
+  position: absolute;
+  top: 0;
+  left: 0;
+  /* width: 30vw; */
+  max-width: 400px;
   object-fit: contain;
   margin: 8px;
   backface-visibility: hidden;
-  filter: drop-shadow(1px 1px rgba(0,0,0,.3));
-  /* filter: drop-shadow(1px 1px #fff); */
+  filter: drop-shadow(0 0 3px rgba(0,0,0,5));
+  /* filter: drop-shadow(1px 1px rgba(0,0,0,.3)); */
+  transition: opacity .3s;
 }
-header.scrolled a:hover{
+/* .header__title-img--not-hover{
+  z-index: 1;
+}
+.header__title-img--not-hover:hover{
+  opacity: 0;
+}
+header.scrolled .header__title-img--not-hover:hover 
++ .header__title-img--hover{
+  opacity: 0;
+} */
+.header__nav-icon{
+  font-size: 24px;
+  color: white;
+  transition: all .3s;
+  text-decoration: none;
+  font-weight: normal;
+}
+.header__nav-icon:hover{
+  color: var(--himawari);
+  border-color: var(--himawari);
+}
+.scrolled .header__nav-icon:hover{
   color: #222;
 }
-header a{
-  font-size: 24px;
-}
-header a + a{
+.header__nav-icon + a{
   margin: 0 16px 0 8px;
 }
 
@@ -151,14 +171,14 @@ header a + a{
 .bgi{
   width: 100%;
   height: 500px;
-  background-image: url(../img/DSCF0817.JPG);
+  background-image: url(../img/ひまわり畑.JPG);
   background-size: cover;
   margin: 0 auto;
 }
 .rgb{
   width: 100%;
   height: 501px;
-  background: linear-gradient(rgba(0,0,0,0),rgba(209, 203, 203,1));
+  background: linear-gradient(rgba(0,0,0,0.4) 8%,rgba(0,0,0,0) 20%,rgba(209, 203, 203,1) 100%);
 }
 
 .hero__list {
@@ -167,6 +187,7 @@ header a + a{
   max-width: 800px;
   margin: 16px auto;
   padding: 1em 2em;
+  color: #fff;
 }
 .hero__list::before {
   position: absolute;
@@ -203,7 +224,7 @@ header a + a{
 
 nav ul{
   text-align: center;
-  padding-top: 300px;
+  padding-top: 260px;
   margin: 0;
   font-family: 'Sansita Swashed', cursive;
 }
@@ -389,6 +410,7 @@ footer{
 }
 footer small{
   color: black;
+  font-family: 'Sansita Swashed', cursive;
 }
 
 /* midium */
