--- a/css/style.css
+++ b/css/style.css
@@ -115,10 +115,11 @@ section + section{
   position: fixed;
   top: 11px;
   right: 11px;
-  width: calc(100% - 330px - 16px);
+  width: calc(100% - 400px - 16px);
   height: calc(100vh - 22px);
   border-top: 1.5px solid rgba(255,255,255,.9);
   border-right: 1px solid rgba(255,255,255,.9);
+  pointer-events: none;
 }
 .bottom-left{
   position: fixed;
@@ -130,6 +131,7 @@ section + section{
   /* border: 1px solid rgba(255,255,255,.9); */
   border-bottom: 1px solid rgba(255,255,255,.9);
   border-left: 1px solid rgba(255,255,255,.9);
+  pointer-events: none;
 }
 
 /* ↑枠線↑ */
@@ -219,13 +221,19 @@ header.scrolled .header__title-img--not-hover:hover
   font-family: 'Sansita Swashed', cursive;
 }
 .hero__list{
-  width: 110px;
+  display: flex;
+  justify-content: center;
+  min-width: 110px;
+  width: 35%;
   height: 60px;
-  margin: 20px;
+  margin: 20px 12px;
+  text-align: center;
   /* outline: 1px solid pink; */
 }
 .hero__list a{
+  display: block;
   position: relative;
+  width: 110px;
 }
 .hero__list-frame{
   position: absolute;
