--- a/css/style.css
+++ b/css/style.css
@@ -28,16 +28,14 @@ h2{
   margin: 8px;
 }
 p{
-  margin: 0;
-}
-ul{
-  padding: 0;
-}
-li{
-  list-style: none;
+  display: table;
+  text-align: left;
 }
 section + section{
   margin-top: 160px;
+}
+img{
+  backface-visibility: hidden;
 }
 .anchor{
   position: relative;
@@ -63,7 +61,7 @@ section + section{
 .sokudoku{
   font-family: 'Noto Serif JP', serif;
   font-weight: normal;
-  font-size: 24px;
+  font-size: 22px;
   letter-spacing: .2em;
   text-decoration: underline;
 }
@@ -90,14 +88,26 @@ section + section{
 
 .top{
   position: fixed;
-  right: 15px;
+  right: 11px;
   bottom: 15px;
 }
 .top__img{
   width: 70px;
   object-fit: contain;
-  backface-visibility: hidden;
   filter: drop-shadow(0 0 3px rgba(0,0,0,5));
+  z-index: 3;
+}
+.top__img-hover{
+  position: absolute;
+  top: 0;
+  left: 0;
+  filter: none;
+  z-index: -1;
+  opacity: 0;
+  transition: opacity .3s;
+}
+.top__img:hover + .top__img-hover{
+  opacity: 1;
 }
 .top{
   opacity: 0;
@@ -158,7 +168,6 @@ header{
   max-width: 400px;
   object-fit: contain;
   margin: 8px;
-  backface-visibility: hidden;
   filter: drop-shadow(0 0 3px rgba(0,0,0,5));
   pointer-events: none;
   transition: opacity .3s;
@@ -175,16 +184,17 @@ header.scrolled .header__title-img--not-hover:hover
 } */
 .header__nav{
   position: absolute;
-  top: 65px;
-  right: 12%;
-  margin: 16px;
+  top: 76px;
+  right: 14%;
 }
 .header__nav-icon{
   font-size: 24px;
+  /* line-height: 60px; */
   color: white;
   filter: drop-shadow(0 0 3px rgba(0,0,0,5));
   text-decoration: none;
   font-weight: normal;
+  /* text-align: center; */
   transition: all .3s;
 }
 .header__nav-icon:hover{
@@ -197,6 +207,21 @@ header.scrolled .header__title-img--not-hover:hover
 .header__nav-icon + a{
   margin: 0 8px;
 }
+/* .header__nav-frame{
+  position: absolute;
+  width: 50px;
+  object-fit: contain;
+  pointer-events: none;
+}
+.header__nav-frame-github{
+  top: -1px;
+  left: -17px;
+}
+.header__nav-frame-insta{
+  top: -13px;
+  right: -20px;
+  transform: rotate(180deg);
+} */
 
 /* hero */
 
@@ -241,7 +266,6 @@ header.scrolled .header__title-img--not-hover:hover
   left: 0px;
   width: 110px;
   object-fit: contain;
-  backface-visibility: hidden;
   filter: drop-shadow(0 0 3px rgba(0,0,0,5));
   z-index: 2;
 }
@@ -455,14 +479,21 @@ footer small{
 
 /* midium-small */
 
-@media (min-width:530px){
+@media (min-width:430px){
   .header__nav{
     position: absolute;
-    top: 0;
-    right: 0;
+    right: calc(100% - 353px);
   }
-  .header__nav-icon + a{
-    margin: 0 16px 0 8px;
+}
+@media (min-width:500px){
+  .header__nav{
+    top: 40px;
+    right: 10px;
+  }
+}
+@media (min-width:530px){
+  .header__nav{
+    top: 12px;
   }
 }
 
