--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ body{
   margin: 0;
   background: rgb(209, 203, 203);
   line-height: 1.6;
-  font-family: 'Shippori Mincho B1', serif;
+  font-family: 'Zen Kurenaido', sans-serif;
 }
 h1{
   color: black;
@@ -34,7 +34,7 @@ p{
   text-align: left;
 }
 section + section{
-  margin-top: 160px;
+  margin: 160px 40px;
 }
 img{
   backface-visibility: hidden;
@@ -45,342 +45,363 @@ img{
   display: block;
 }
 
-/* ↓各サイト用フォント↓ */
 
-@font-face{ 
-  font-family: 'huiji-subset';
-  src: url('../fonts/ふい字\(サブセット\).ttf') format('truetype');
-  font-weight: normal;
-  font-style: normal;
-}
-.monte{
-  font-family: 'huiji-subset', cursive;
-}
-.monte-img{
-  width: 150px;
-  object-fit: contain;
-}
-.sokudoku{
-  font-family: 'Noto Serif JP', serif;
-  font-weight: normal;
-  font-size: 22px;
-  letter-spacing: .2em;
-  text-decoration: underline;
-}
-.typing{
-  font-family: 'Monofett', cursive;
-  color: #fff;
-  font-size: 40px;
-  letter-spacing: .07em;
-  text-shadow: 2px 2px 2px rgba(0,0,0,.5);
-}
-.monkeybord{
-  font-family: 'Kaisei HarunoUmi', serif;
-  font-size: 24px;
-}
-.monkeybord span{
-  font-family: 'Kaisei HarunoUmi', serif;
-  font-size: 19px;
-}
+/* ↓↓　各サイト用フォント　↓↓ */
 
-/* ↑各サイト用フォント↑ */
+  @font-face{ 
+    font-family: 'huiji-subset';
+    src: url('../fonts/ふい字\(サブセット\).ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+  }
+  .monte{
+    font-family: 'huiji-subset', cursive;
+  }
+  .monte-img{
+    width: 150px;
+    object-fit: contain;
+  }
+  .sokudoku{
+    font-family: 'Noto Serif JP', serif;
+    font-weight: normal;
+    font-size: 22px;
+    letter-spacing: .2em;
+    text-decoration: underline;
+  }
+  .typing{
+    font-family: 'Monofett', cursive;
+    color: #fff;
+    font-size: 40px;
+    letter-spacing: .07em;
+    text-shadow: 2px 2px 2px rgba(0,0,0,.5);
+  }
+  .monkeybord{
+    font-family: 'Kaisei HarunoUmi', serif;
+    font-size: 24px;
+  }
+  .monkeybord span{
+    font-family: 'Kaisei HarunoUmi', serif;
+    font-size: 19px;
+  }
 
-
-/* ↓TOPへ戻るボタン↓ */
-
-.top{
-  position: fixed;
-  right: 11px;
-  bottom: 15px;
-}
-.top__img{
-  width: 70px;
-  object-fit: contain;
-  filter: drop-shadow(0 0 3px rgba(0,0,0,5));
-  z-index: 3;
-}
-.top__img-hover{
-  position: absolute;
-  top: 0;
-  left: 0;
-  filter: none;
-  z-index: -1;
-  opacity: 0;
-  transition: opacity .3s;
-}
-.top__img:hover + .top__img-hover{
-  opacity: 1;
-}
-.top{
-  pointer-events: none;
-  opacity: 0;
-  transition: opacity .5s;
-}
-.top.show{
-  pointer-events: all;
-  opacity: 1;
-}
-
-/* ↑TOPへ戻るボタン↑ */
-
-/* ↓枠線↓ */
-
-.top-right{
-  position: fixed;
-  top: 11px;
-  right: 11px;
-  width: calc(100% - 400px - 16px);
-  height: calc(100vh - 22px);
-  border-top: 1.5px solid rgba(255,255,255,.9);
-  border-right: 1.5px solid rgba(255,255,255,.9);
-  pointer-events: none;
-
-  /* border-color: rgb(193, 164, 64); */
-  /* border-color: rgb(19, 59, 8); */
-}
-.bottom-left{
-  position: fixed;
-  top: 180px;
-  left: 11px;
-  width: 100px;
-  width: calc(100% - 22px);
-  height: calc(100vh - 180px - 11px);
-  border-bottom: 1.5px solid rgba(255,255,255,.9);
-  border-left: 1.5px solid rgba(255,255,255,.9);
-  pointer-events: none;
-  
-  /* border-color: rgb(193, 164, 64);
-  border-color: rgb(19, 59, 8); */
-}
-
-/* ↑枠線↑ */
+/* ↑↑　各サイト用フォント　↑↑ */
 
 
-/* header */
+/* ↓↓　ロード画面　↓↓ */
 
-header{
-  position: fixed;
-  top: 0;
-  height: 9vw;
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  transition:background-color .3s, box-shadow .3s;
-  z-index: 3;
-}
-.header__title-img{
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: calc(100% - 16px);
-  max-width: 400px;
-  object-fit: contain;
-  margin: 8px;
-  /* filter: drop-shadow(0 0 3px rgba(255,255,255,5)); */
-  filter: drop-shadow(0 0 3px rgba(0,0,0,5));
-  pointer-events: none;
-  transition: opacity .3s;
-}
-/* .header__title-img--not-hover{
-  z-index: 1;
-}
-.header__title-img--not-hover:hover{
-  opacity: 0;
-}
-header.scrolled .header__title-img--not-hover:hover 
-+ .header__title-img--hover{
-  opacity: 0;
-} */
-.header__nav{
-  position: absolute;
-  top: 76px;
-  right: 14%;
-}
-.header__nav-icon{
-  font-size: 24px;
-  /* line-height: 60px; */
-  /* color: rgb(193, 164, 64);
-  color: rgb(19, 59, 8); */
-  color: white;
-  filter: drop-shadow(0 0 3px rgba(0,0,0,5));
-  text-decoration: none;
-  font-weight: normal;
-  /* text-align: center; */
-  transition: all .3s;
-}
-.header__nav-icon:hover{
-  color: var(--himawari);
-  border-color: var(--himawari);
-}
-.scrolled .header__nav-icon:hover{
-  color: #222;
-}
-.header__nav-icon + a{
-  margin: 0 8px;
-}
-/* .header__nav-frame{
-  position: absolute;
-  width: 50px;
-  object-fit: contain;
-  pointer-events: none;
-}
-.header__nav-frame-github{
-  top: -1px;
-  left: -17px;
-}
-.header__nav-frame-insta{
-  top: -13px;
-  right: -20px;
-  transform: rotate(180deg);
-} */
-
-/* hero */
-
-.hero__himawari{
-  width: 100%;
-  height: 600px;
-  background-image: url(../img/himawari.jpg);
-  background-size: cover;
-  background-position: 50% 20%;
-  margin: 0 auto;
-}
-.hero__gradient{
-  width: 100%;
-  height: 601px;
-  background: linear-gradient(rgba(0,0,0,0.4) 8%,rgba(0,0,0,0) 40%,rgba(209, 203, 203,1) 100%);
-}
-.hero__lists{
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  padding-top: 270px;
-  margin: 0 auto;
-  font-family: 'Sansita Swashed', cursive;
-}
-.hero__list{
-  display: flex;
-  justify-content: center;
-  min-width: 110px;
-  width: 35%;
-  height: 60px;
-  margin: 20px 12px;
-  text-align: center;
-  /* outline: 1px solid pink; */
-}
-.hero__list a{
-  display: block;
-  position: relative;
-  width: 110px;
-}
-.hero__list-frame{
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  width: 110px;
-  object-fit: contain;
-  filter: drop-shadow(0 0 3px rgba(0,0,0,5));
-  z-index: 2;
-}
-.hero__list-frame-hover{
-  opacity: 0;
-  filter: none;
-  z-index: 1;
-  transition: opacity .3s;
-}
-.hero__list-frame:hover + .hero__list-frame-hover{
-  opacity: 1;
-}
-.hero__list div{
-  position: absolute;
-  color: #fff;
-  /* color: rgb(193, 164, 64);
-  color: rgb(19, 59, 8); */
-  font-size: 20px;
-  text-shadow: 0 0 3px rgba(0,0,0,.4);
-}
-.hero__list:nth-child(1) div{
-  top: -6px;
-  left: 23px;
-}
-.hero__list:nth-child(2) div{
-  top: -6px;
-  left: 29px;
-}
-.hero__list:nth-child(3) div{
-  top: -6px;
-  left: 22px;
-}
-.hero__list:nth-child(4) div{
-  top: -6px;
-  left: 14px;
-}
-
-
-/* about */
-
-.about p{
-  max-width: 700px;
-  text-align: center;
-  padding: 0 40px;
-  margin: 24px auto 24px;
-}
-details{
-  margin: 0 auto;
-  max-width: 580px;
-  padding: 0 50px;
-}
-details + details{
-  margin-top: 10px;
-}
-summary{
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  cursor: pointer;
-  outline: none;
-  background-color: rgb(185, 177, 173);
-  border: 1px solid #fff;
-  padding: 5px 30px;
-  color: #fff;
-  transition: all .3s;
-}
-summary:hover{
-  background-color: rgba(255, 208, 0,0.3);
-}
-summary::after{
-  content: "+";
-  color: #fff;
-  font-size: 21px;
-  transition: transform 1s;
-}
-details[open] summary::after{
-  transform: rotate(225deg);
-}
-summary::-webkit-details-marker{
-  display: none;
-}
-.answer{
-  padding: 10px;
-  line-height: 1.6;
-}
-.answer p{
-  padding: 0;
-  margin: 0;
-}
-details[open] .answer{
-  animation: fadein .5s;
-}
-@keyframes fadein{
-  0%{
+  .loading{
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100vw;
+    height: 100vh;
+    background-color: #999;
+    opacity: .95;
+    z-index: 999;
+    transition: opacity 1s;
+  }
+  .loading.loaded{
     opacity: 0;
-    transform: translateY(-20px);
+    pointer-events: none;
   }
-  100%{
+  .loading div{
+    position: relative;
+  }
+  .loading p{
+    position: absolute;
+    top: -12px;
+    left: -32px;
+  }
+  .loading__img{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 150px;
+    transform: translate(-50%,-50%);
+    object-fit: contain;
+    display: none;
+  }
+  .loading__img.show{
+    display: block;
+  }
+
+/* ↑↑　ロード画面　↑↑ */
+
+
+/* ↓↓　TOPへ戻るボタン　↓↓ */
+
+  .top{
+    position: fixed;
+    right: 11px;
+    bottom: 15px;
+  }
+  .top__img{
+    width: 70px;
+    object-fit: contain;
+    filter: drop-shadow(0 0 3px rgba(0,0,0,.5));
+    z-index: 3;
+  }
+  .top__img-hover{
+    position: absolute;
+    top: 0;
+    left: 0;
+    filter: none;
+    z-index: -1;
+    opacity: 0;
+    transition: opacity .3s;
+  }
+  .top__img:hover + .top__img-hover{
     opacity: 1;
-    transform: none;
   }
-}
+  .top{
+    pointer-events: none;
+    opacity: 0;
+    transition: opacity .5s;
+  }
+  .top.show{
+    pointer-events: all;
+    opacity: 1;
+  }
+
+/* ↑↑　TOPへ戻るボタン　↑↑ */
+
+
+/* ↓↓　枠線　↓↓ */
+
+  .top-right{
+    position: fixed;
+    top: 11px;
+    right: 11px;
+    width: calc(100% - 400px - 16px);
+    height: calc(100vh - 22px);
+    border-top: 1.5px solid rgba(255,255,255,.9);
+    border-right: 1.5px solid rgba(255,255,255,.9);
+    pointer-events: none;
+
+    /* border-color: rgb(193, 164, 64); */
+    /* border-color: rgb(19, 59, 8); */
+  }
+  .bottom-left{
+    position: fixed;
+    top: 180px;
+    left: 11px;
+    width: 100px;
+    width: calc(100% - 22px);
+    height: calc(100vh - 180px - 11px);
+    border-bottom: 1.5px solid rgba(255,255,255,.9);
+    border-left: 1.5px solid rgba(255,255,255,.9);
+    pointer-events: none;
+    
+    /* border-color: rgb(193, 164, 64);
+    border-color: rgb(19, 59, 8); */
+  }
+
+/* ↑↑　枠線　↑↑ */
+
+
+/* ↓↓　header　↓↓ */
+
+  header{
+    position: fixed;
+    top: 0;
+    height: 9vw;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    transition:background-color .3s, box-shadow .3s;
+    z-index: 3;
+  }
+  .header__title-img{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: calc(100% - 16px);
+    max-width: 400px;
+    object-fit: contain;
+    margin: 8px;
+    filter: drop-shadow(0 0 3px rgba(0,0,0,.5));
+    pointer-events: none;
+    transition: opacity .3s;
+  }
+  .header__nav{
+    position: absolute;
+    top: 76px;
+    right: 14%;
+  }
+  .header__nav-icon{
+    font-size: 24px;
+    /* color: rgb(193, 164, 64);
+    color: rgb(19, 59, 8); */
+    color: white;
+    filter: drop-shadow(0 0 3px rgba(0,0,0,.7));
+    text-decoration: none;
+    transition: all .3s;
+  }
+  .header__nav-icon:hover{
+    color: var(--himawari);
+    border-color: var(--himawari);
+  }
+  .header__nav-icon + a{
+    margin: 0 8px;
+  }
+
+/* ↑↑　header　↑↑ */
+
+
+/* ↓↓　hero　↓↓ */
+
+  .hero__himawari{
+    width: 100%;
+    height: 600px;
+    background-image: url(../img/himawari.jpg);
+    background-size: cover;
+    background-position: 50% 20%;
+    margin: 0 auto;
+  }
+  .hero__gradient{
+    width: 100%;
+    height: 601px;
+    background: linear-gradient(rgba(0,0,0,0.4) 8%,rgba(0,0,0,0) 40%,rgba(209, 203, 203,1) 100%);
+  }
+  .hero__lists{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding-top: 270px;
+    margin: 0 auto;
+    font-family: 'Sansita Swashed', cursive;
+  }
+  .hero__list{
+    display: flex;
+    justify-content: center;
+    min-width: 110px;
+    width: 35%;
+    height: 60px;
+    margin: 20px 12px;
+    text-align: center;
+    /* outline: 1px solid pink; */
+  }
+  .hero__list a{
+    display: block;
+    position: relative;
+    width: 110px;
+  }
+  .hero__list-frame{
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 110px;
+    object-fit: contain;
+    filter: drop-shadow(0 0 3px rgba(0,0,0,1));
+    z-index: 2;
+  }
+  .hero__list-frame-hover{
+    opacity: 0;
+    filter: none;
+    z-index: 1;
+    transition: opacity .3s;
+  }
+  .hero__list-frame:hover + .hero__list-frame-hover{
+    opacity: 1;
+  }
+  .hero__list div{
+    position: absolute;
+    color: #fff;
+    /* color: rgb(193, 164, 64);
+    color: rgb(19, 59, 8); */
+    font-size: 20px;
+    text-shadow: 0 0 3px rgba(0,0,0,1);
+  }
+  .hero__list:nth-child(1) div{
+    top: -6px;
+    left: 23px;
+  }
+  .hero__list:nth-child(2) div{
+    top: -6px;
+    left: 29px;
+  }
+  .hero__list:nth-child(3) div{
+    top: -6px;
+    left: 22px;
+  }
+  .hero__list:nth-child(4) div{
+    top: -6px;
+    left: 14px;
+  }
+
+/* ↑↑　hero　↑↑ */
+
+
+
+/* ↓↓　about　↓↓ */
+
+  .about p{
+    max-width: 700px;
+    margin: 8px auto;
+  }
+  details{
+    margin: 0 auto;
+    max-width: 580px;
+    /* padding: 0 50px; */
+  }
+  details + details{
+    margin-top: 10px;
+  }
+  summary{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    cursor: pointer;
+    outline: none;
+    background-color: rgb(185, 177, 173);
+    border: 1px solid #fff;
+    padding: 5px 30px;
+    color: #fff;
+    transition: all .3s;
+  }
+  summary:hover{
+    background-color: rgba(255, 208, 0,0.3);
+  }
+  summary::after{
+    content: "+";
+    color: #fff;
+    font-size: 21px;
+    transition: transform 1s;
+  }
+  details[open] summary::after{
+    transform: rotate(225deg);
+  }
+  summary::-webkit-details-marker{
+    display: none;
+  }
+  .answer{
+    padding: 10px;
+    line-height: 1.6;
+  }
+  .answer p{
+    padding: 0;
+    margin: 0;
+  }
+  details[open] .answer{
+    animation: fadein .5s;
+  }
+  @keyframes fadein{
+    0%{
+      opacity: 0;
+      transform: translateY(-20px);
+    }
+    100%{
+      opacity: 1;
+      transform: none;
+    }
+  }
+
+/* ↑↑　about　↑↑ */
+
 
 /* skill */
 
@@ -388,13 +409,9 @@ details[open] .answer{
   margin: 0 20px;
   display: flex;
   align-items: center;
-  opacity: 0;
+  /* opacity: 0;
   transform: translateY(20px);
-  transition: opacity .5s, transform .5s ;
-}
-.skill li.appear{
-  opacity: 1;
-  transform: translateY(0);
+  transition: opacity .5s, transform .5s ; */
 }
 .skill li + li{
   margin-top: 24px;
