--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ html{
 body{
   /* font-family: "OptimaLTPro-Roman","Ryumin Regular KL",serif; */
   width: 100%;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
   position: relative;
   margin: 0;
   background: rgb(209, 203, 203);
@@ -254,6 +254,9 @@ img{
 
 /* ↓↓　hero　↓↓ */
 
+  .hero{
+    overflow: hidden;
+  }
   .hero__himawari{
     width: 100%;
     height: 600px;
